# cv_rec

./: .env.example  .gitignore  ARCHITECTURE.md  ATS_FIELD_REVIEW.md  DOCS.md  Dockerfile  E2E_SELF_CHECKLIST.md  FEISHU_SCOPE_REDUCTION_REVIEW.md  HANDOFF.md  PLUGIN_INTEGRATION_REVIEW.md  PLUGIN_MVP_FIELD_REQUIREMENTS.md  PRODUCT_FLOW_PRD.md  README.md  RELEASE_CHECKLIST.md  SCHEMA.md  cost_experiment.py  docker-compose.yml  pyproject.toml  start_cv_rec.bat  start_cv_rec.py  start_cv_rec.sh
.claude/: settings.json
With_Le/chrome-extension/: TESTING.md  manifest.json  test-form.html  test-resume.json
With_Le/docs/: PROJECT_STATE.md  调研任务.docx
app/: __init__.py  main.py
app/api/: deps.py  errors.py
app/core/: config.py  db.py  exceptions.py  logging.py  security.py
app/models/: app_config.py  base.py  cost_log.py  fill_plan_cache.py  resume.py  user.py
app/parsers/: preprocess.py
app/prompts/: fill_form.py  parse_resume.py
app/repositories/: config_repo.py  cost_log_repo.py  fill_cache_repo.py  resume_repo.py  user_repo.py
app/schemas/: admin.py  api.py  fill_plan.py  resume.py
app/services/: admin_service.py  config_service.py  fill_service.py  model_debug.py  parsing_service.py  resume_service.py  user_service.py
examples/: form_fields.json  form_fields_cross_label.json
scripts/: backend_smoke_check.py  dump_preprocessed.py  inspect_basic.py  inspect_edu.py  one_click_start.py  package_extension.py  package_release.py  replay_parse.py  resume_data_quality_check.py  resume_parse_chain_check.py
tests/: conftest.py
tests/fakes/: fake_model.py
tests/fixtures/: build_pdf.py  sample_resume.py
tests/integration/: test_admin.py  test_auth.py  test_e2e_fill.py  test_e2e_resume.py
tests/unit/: test_fill_plan_sections.py  test_fill_service_helpers.py  (+6 more)
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
(+68 files in other folders)
