[project]
name = "resume-parsing-platform"
version = "0.1.0"
description = "AI-powered resume parsing & smart form filling backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "aiosqlite>=0.20,<1.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.6,<3.0",
    "httpx>=0.27,<1.0",
    "python-multipart>=0.0.12,<1.0",
    "PyMuPDF>=1.24,<2.0",
    "python-docx>=1.1,<2.0",
    "Pillow>=10.4,<12.0",
    "structlog>=24.4,<26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]
postgres = [
    "asyncpg>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
